added input validation, empty input not allowed

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,4 +84,9 @@ body {
 .registerContainer .btn:hover {
   cursor: pointer;
 }
+
+.registerContainer .error {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #e75353;
+}
 /*# sourceMappingURL=styles.css.map */
