--- a/css/styles.scss
+++ b/css/styles.scss
@@ -61,5 +61,10 @@ body {
         }
     }
 
+    .error {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: rgb(231, 83, 83);
+    }
+
 }
 
