--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 .registerContainer {
   margin-top: 100px;
   background-color: white;
-  width: 40%;
+  width: 400px;
   height: 500px;
   border-radius: 8px;
   text-align: center;
@@ -45,7 +45,7 @@ body {
 .registerContainer input {
   height: 40px;
   width: 80%;
-  margin: 10px 10%;
+  margin: 13px 10%;
   text-align: center;
   font-size: 18px;
   border-radius: 4px;
