--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,7 +13,7 @@ body {
     margin-top: 100px;
     background-color: white;
     width: 400px;
-    height: 500px;
+    height: auto;
     border-radius: 8px;
     text-align: center;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -49,7 +49,7 @@ body {
     }
 
     .btn {
-        margin-top: 40px;
+        margin: 40px 0px;
         background-color: #06c258;
         color: white;
         border-radius: 4px;
